workflows/output/build-out/smyle.cdr-atlas-v0.glb-dor.North_Atlantic_basin-000-1999-01-01.000.001-31776667.out
Unloading the cpe module is insufficient to restore the system defaults.
Please run 'source
/opt/cray/pe/cpe/23.12/restore_lmod_system_defaults.[csh|sh]'. 
Running "module reset". Resetting modules to system default. The following $MODULEPATH directories have been removed: /opt/cray/pe/lmod/modulefiles/mpi/gnu/12.0/ofi/1.0/cray-mpich/8.0
  File "/global/u2/m/mattlong/codes/Ocean-CDR-Atlas-v0/workflows/cesm.py", line 26
    alk_forcing_file,    
    ^^^^^^^^^^^^^^^^
SyntaxError: duplicate argument 'alk_forcing_file' in function definition
